--- a/css/style.css
+++ b/css/style.css
@@ -248,15 +248,16 @@ section {
     }
     .navlist{
         position: absolute;
-        top: 100%;
+        top: 90%;
         right: -100%;
-        width: 300px;
-        height: 40vh;
+        width: 200px;
+        height: 30vh;
         background: #323233;
+        border-radius: 40px;
         display: flex;
         align-items: center;
         flex-direction: column;
-        padding: 50px 20px;
+        padding: 40px 10px;
         transition: all .55s ease;
     }
     .navlist a{
@@ -264,6 +265,7 @@ section {
         display: block;
         margin: 5px 0;
     }
+
     .navlist.open{
         right: 0;
     }
