--- a/css/style.css
+++ b/css/style.css
@@ -270,6 +270,11 @@ section {
         right: 0;
     }
 
+    .act-img img{
+        width: 100%;
+        height: auto;   
+    }
+
 
 }
 
@@ -286,6 +291,20 @@ section {
         margin-top: 20px;
         height: 3px;
     }
+
+    .act-img img{
+        width: 50%;
+        height: auto;
+        padding-top: 200px;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .about-img img{
+        width: 50%;
+        height: auto;
+    }
+
 }
 
 .about{
