--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
 }
 
 body{
-    background: linear-gradient(245.59deg, #815ce7 0%, #4f2592 28.53%, #4a3791 75.52%);     
+    background: linear-gradient(245.59deg, #815ce7 0%, #4f2592 28.53%, #674ec2 75.52%);     
 }
 
 header{
@@ -38,6 +38,7 @@ header.sticky {
 .logo{
     font-size: 20px;
     font-weight: 700;
+    font-style: oblique;
     color: white;
     text-shadow: #323233 5px 4px;
 }
@@ -53,10 +54,11 @@ header.sticky {
     font-weight: 600;
     border-bottom: 2px solid transparent;
     transition: all .55s ease;
+    
 }
 
 .navlist a:hover{
-    border-bottom: 2px solid white;
+    border-bottom: 2px solid white; 
 }
 
 #menu-icon{
@@ -136,6 +138,7 @@ section {
 .hero-text a:hover {
     border: 1px solid white;
     transform: translateX(8px);
+    background: #4242424d;
 }
 
 .hero-text a.ctaa {
@@ -163,7 +166,7 @@ section {
 }
 
 .icons i:hover {
-    color: #686868;
+    color: #424242;
     transform: translateY(-5px);
 }
 
@@ -258,7 +261,7 @@ section {
     .navlist{
         position: absolute;
         top: 90%;
-        right: -100%;
+        right: -50%;
         width: 200px;
         height: 25vh;
         background: #323233;
@@ -406,6 +409,17 @@ section {
 }
 
 .footer-contacts i:hover{
-    color:  #686868;
     transform: translateY(-5px);
+}
+
+.footer-contacts .ri-youtube-fill:hover {
+    color: rgb(255, 24, 24);
+}
+
+.footer-contacts .ri-instagram-line:hover {
+    color: rgb(247, 72, 247);
+}
+
+.footer-contacts .ri-github-fill:hover {
+    color: #141414;
 }
