--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,9 @@
 
 body{
     background: linear-gradient(245.59deg, #815ce7 0%, #4f2592 28.53%, #674ec2 75.52%);
-     
+    background-position: center;
+    background-size: cover;
+     height: 100vh;
 }
 
 html{
@@ -278,128 +280,6 @@ section {
     max-width: 300px;
     margin: 10px;
 }
-
-@media (max-width: 1535px){
-    header{
-        padding: 15px 3%;
-        transition: .2s;
-    }
-    .icons{
-        padding: 0 3%;
-        transition: .2s;
-    }
-    .scroll-down{
-        right: 3%;
-        transition: .2s;
-    }
-}
-
-@media (max-width: 1460px){
-    section{
-        padding: 0 12%;
-        transition: .2s;
-    }
-}
-
-@media (max-width: 1340px){
-    .hero-img img{
-        width: 100%;
-        height: auto;
-    } 
-    .hero-text h1{
-        font-size: 75px;
-        margin: 0 0 30px;
-    }
-    .hero-text h5{
-        margin-bottom: 25px;
-    }
-
-}
-@media (max-width: 1195px){
-    section{
-        padding: 0 3%;
-        transition: .2s;
-    }
-    .hero-text{
-        padding-top: 115px;
-    }
-    .hero-img{
-        text-align: center;
-    }
-    .hero-img img{
-        width: 560px;
-        height: auto;
-    }
-    .hero{
-        height: 100%;
-        gap: 1rem;
-        grid-template-columns: 1fr;
-    }
-    .icons{
-        display: none;
-    }
-    .scroll-down{
-        display: none;
-    }
-
-}
-@media (max-width: 990px){
-    #menu-icon{
-        display: block;
-    }
-    .navlist{
-        position: absolute;
-        top: 90%;
-        right: -50%;
-        width: 200px;
-        height: 25vh;
-        z-index: 100;
-        background: #323233;
-        border-radius: 40px;
-        display: flex;
-        align-items: center;
-        flex-direction: column;
-        padding: 40px 10px;
-        transition: all .55s ease;
-    }
-    .navlist a{
-        margin-left: 0;
-        display: block;
-        margin: 5px 0;
-    }
-
-    .navlist.open{
-        right: 0;
-    }
-
-    .act-img img{
-        width: 100%;
-        height: auto;   
-    }
-
-    .logo{
-    font-size: 15px;
-    }
-
-}
-
-@media (max-width: 680px){
-    .hero-img img{
-        width: 100%;
-        height: auto;
-    }
-
-    .footer-contacts{
-        display: flex;
-        text-align: center;
-        justify-content: center; 
-        margin-top: 20px;
-        height: 3px;
-    }
-
-
-}
-
 
 .contacts h4{
     text-align: center;
